--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ pool:
 stages:
   - stage: Build
     jobs:
-      - job: package-maven
+      - job: package_maven
         displayName: Package Maven
         steps:
         - task: Maven@3
