--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ pool:
   vmImage: ubuntu-latest
   
 stages:
-- stage: build-and-publish
+- stage: build_and_publish
   displayName: Build and Publish
   jobs:
     - job: package_maven
@@ -41,7 +41,7 @@ stages:
           ArtifactName: 'spring-mvn-jar'
           publishLocation: 'Container'
 
-- stage: security-scan
+- stage: security_scan
   displayName: Security Scan Stage
   jobs:
     - job: static-application-security-testing
