--- a/azure-pipelines-templated.yml
+++ b/azure-pipelines-templated.yml
@@ -27,21 +27,5 @@ stages:
 - stage: security_scan
   displayName: Security Scan Stage
   jobs:
-    - job: static_application_security_testing
-      displayName: SAST Scan Job
-      steps:
-        - script: |
-            echo "**********************SAST**********************"
-            echo "Starting Static Application Scan... "
-            echo "Finishing Static Application Scan... "
-            echo "Your application is good to go (view scan results in the portal)."
-            echo "************************************************"
-    - job: software_composition_analysis
-      displayName: SCA Scan Job
-      steps:
-        - script: |
-            echo "***********************SCA***********************"
-            echo "Scanning your applications 3rd party dependencies... "
-            echo "Finishing your SCA Scan... "
-            echo "1 High vulnerability detected: { "Blacklist" : false, "Component Filename" : "struts.jar", "Versions" : "1.2.4" } "
-            echo "*************************************************"
+    - template: job-templates/sast-scan-job@azure-templates-repo
+    - template: job-templates/sca-scan-job@azure-templates-repo
