--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "Buld triggered by a ${{ github.event_name }} event on a ${{ runner.os }} server."
-      - run: echo "Branch Name: ${{ github.ref }}"
+      - run: 'echo "Branch Name: ${{ github.ref }}"'
       - name: Check out repository code
         uses: actions/checkout@v2
       - run: echo "The ${{ github.repository }} repository has been cloned to the runner."
