--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -4,8 +4,7 @@ jobs:
   Build:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Buld triggered by a ${{ github.event_name }} event on a ${{ runner.os }} server."
-      - run: 'echo "Branch Name: ${{ github.ref }}"'
+      - run: 'echo "Buld triggered by a ${{ github.event_name }} event on a ${{ runner.os }} server (for branch: ${{ github.ref }})."'
       - name: Check out repository code
         uses: actions/checkout@v2
       - run: echo "The ${{ github.repository }} repository has been cloned to the runner."
@@ -13,4 +12,4 @@ jobs:
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
-      - run: echo "This job's status is ${{ job.status }}."
+      - run: 'echo "Job Status: ${{ job.status }}"'
