--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,14 +1,23 @@
 name: GitHub Actions
 on: [push]
 jobs:
-  # Label of the container job
-  container-job:
-    # Containers must run in Linux based operating systems
+  Build:
     runs-on: ubuntu-latest
-    # Docker Hub image that `container-job` executes in
-    container: node:10.18-jessie
+    steps:
+      - run: 'echo "Buld triggered by a ${{ github.event_name }} event on a ${{ runner.os }} server (for branch: ${{ github.ref }})."'
+      - name: Check out repository code
+        uses: actions/checkout@v2
+      - run: echo "The ${{ github.repository }} repository has been cloned to the runner."
+      - run: echo "The workflow is now ready to test your code on the runner."
+      - name: List files in the repository
+        run: |
+          ls ${{ github.workspace }}
+      - run: 'echo "Job Status: ${{ job.status }}"'
+  Container-Job:
+    # You must use a Linux environment when using service containers or container jobs
+    runs-on: ubuntu-latest
 
-    # Service containers to run with `container-job`
+    # Service containers to run with `runner-job`
     services:
       # Label used to access the service container
       postgres:
@@ -23,36 +32,6 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-
-    steps:
-      # Downloads a copy of the code in your repository before running CI tests
-      - name: Check out repository code
-        uses: actions/checkout@v2
-
-      # Performs a clean installation of all dependencies in the `package.json` file
-      # For more information, see https://docs.npmjs.com/cli/ci.html
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Connect to PostgreSQL
-        # Runs a script that creates a PostgreSQL table, populates
-        # the table with data, and then retrieves the data.
-        run: node client.js
-        # Environment variables used by the `client.js` script to create a new PostgreSQL table.
-        env:
-          # The hostname used to communicate with the PostgreSQL service container
-          POSTGRES_HOST: postgres
-          # The default PostgreSQL port
-          POSTGRES_PORT: 5432
-  Build:
-    runs-on: ubuntu-latest
-    steps:
-      - run: 'echo "Buld triggered by a ${{ github.event_name }} event on a ${{ runner.os }} server (for branch: ${{ github.ref }})."'
-      - name: Check out repository code
-        uses: actions/checkout@v2
-      - run: echo "The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: 'echo "Job Status: ${{ job.status }}"'
+        ports:
+          # Maps tcp port 5432 on service container to the host
+          - 5432:5432
