--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -2,22 +2,10 @@ name: GitHub Actions
 on: [push]
 jobs:
   Build:
-    runs-on: ubuntu-latest
-    steps:
-      - run: 'echo "Buld triggered by a ${{ github.event_name }} event on a ${{ runner.os }} server (for branch: ${{ github.ref }})."'
-      - name: Check out repository code
-        uses: actions/checkout@v2
-      - run: echo "The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: 'echo "Job Status: ${{ job.status }}"'
-  Container-Job:
     # You must use a Linux environment when using service containers or container jobs
     runs-on: ubuntu-latest
 
-    # Service containers to run with `runner-job`
+    # Service containers to run with `Build`
     services:
       # Label used to access the service container
       postgres:
@@ -35,3 +23,13 @@ jobs:
         ports:
           # Maps tcp port 5432 on service container to the host
           - 5432:5432
+    steps:
+      - run: 'echo "Buld triggered by a ${{ github.event_name }} event on a ${{ runner.os }} server (for branch: ${{ github.ref }})."'
+      - name: Check out repository code
+        uses: actions/checkout@v2
+      - run: echo "The ${{ github.repository }} repository has been cloned to the runner."
+      - run: echo "The workflow is now ready to test your code on the runner."
+      - name: List files in the repository
+        run: |
+          ls ${{ github.workspace }}
+      - run: 'echo "Job Status: ${{ job.status }}"'
