--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,3 +1,6 @@
+env:
+  POSTGRES_VERSION: 14.1
+
 name: GitHub Actions
 on: [push]
 jobs:
@@ -10,7 +13,7 @@ jobs:
       # Label used to access the service container
       postgres:
         # Docker Hub image
-        image: postgres:14.1
+        image: postgres:$POSTGRES_VERSION
         # Provide the password for postgres
         env:
           POSTGRES_PASSWORD: postgres
