--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -13,7 +13,7 @@ jobs:
       # Label used to access the service container
       postgres:
         # Docker Hub image
-        image: postgres:$POSTGRES_VERSION
+        image: postgres:"$POSTGRES_VERSION"
         # Provide the password for postgres
         env:
           POSTGRES_PASSWORD: postgres
