--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,8 +1,9 @@
-env:
-  POSTGRES_VERSION: 14.1
-
 name: GitHub Actions
 on: [push]
+
+# env:
+#   POSTGRES_VERSION: 14.1
+
 jobs:
   Build:
     # You must use a Linux environment when using service containers or container jobs
@@ -13,7 +14,7 @@ jobs:
       # Label used to access the service container
       postgres:
         # Docker Hub image
-        image: 'postgres:$POSTGRES_VERSION'
+        image: postgres:14.1
         # Provide the password for postgres
         env:
           POSTGRES_PASSWORD: postgres
